--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "git+https://github.com/cyanthing/videoPlayer.git"
   },
   "keywords": [
-    "video player"
+    "video player",
+    "video"
   ],
   "author": "AqinCyan",
   "license": "MIT",
